--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,27 @@ body{
 
 }
 
+.boiteMonstres{
+
+    background: url(img/mob01.png);
+    height: 150px;
+    width: 150px;
+}
+
+.boiteMonstres .monstre1{
+
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: aliceblue;
+    border-radius: 2%;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+
+}
+
+
 
 .herosSprite{
 
@@ -93,4 +114,13 @@ body{
     padding: 5% 1% 1% 1%; 
     display: flex;
     flex-direction: column;
+    width: 100%; 
+    height: 200px; 
+}
+
+
+.boiteMonstres:hover .monstre1{
+
+    visibility: visible;
+
 }
