--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@ body{
 
 }
 
-.boiteMonstres{
+/*.boiteMonstres{
 
     background: url(img/mob01.png);
     height: 150px;
     width: 150px;
-}
+}*/
 
 .boiteMonstres .monstre1{
 
@@ -32,7 +32,31 @@ body{
 
 }
 
+.boiteMonstres .monstre2{
 
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: aliceblue;
+    border-radius: 2%;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+
+}
+
+.boiteMonstres .monstre3{
+
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: aliceblue;
+    border-radius: 2%;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+
+}
 
 .herosSprite{
 
@@ -120,6 +144,18 @@ body{
 
 
 .boiteMonstres:hover .monstre1{
+
+    visibility: visible;
+
+}
+
+.boiteMonstres:hover .monstre2{
+
+    visibility: visible;
+
+}
+
+.boiteMonstres:hover .monstre3{
 
     visibility: visible;
 
